# spr_client

./: CMakeLists.txt  spr_client.cpp  spr_client.h
browseZeroConf/: browse_bonjour.cpp  browse_bonjour.hpp  browse_mdns.hpp
common/: aixlog.hpp  settings.hpp
